--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,10 +38,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
             android:text="SORT BY"
+            app:layout_constraintBottom_toBottomOf="@+id/sort_by_spinner"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/sort_by_spinner" />
 
         <TextView
             android:id="@+id/upload_date_tv"
@@ -51,9 +51,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:text="UPLOAD DATE"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/upload_date_spinner"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sort_by_tv" />
+            app:layout_constraintTop_toTopOf="@+id/upload_date_spinner" />
 
         <Spinner
             android:id="@+id/upload_date_spinner"
