Added remove from playlist feature

--- a/app/src/main/res/layout/playlist_item_layout.xml
+++ b/app/src/main/res/layout/playlist_item_layout.xml
@@ -7,16 +7,17 @@
 
 
     <ImageView
-        android:id="@+id/playlist_item_grab"
+        android:id="@+id/playlist_item_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_drag_handle" />
+        app:srcCompat="@drawable/ic_action_play" />
 
     <TextView
         android:id="@+id/playlist_item_title"
@@ -32,7 +33,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/playlist_item_delete"
-        app:layout_constraintStart_toEndOf="@+id/playlist_item_grab"
+        app:layout_constraintStart_toEndOf="@+id/playlist_item_play"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
