--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,38 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     tools:context="com.example.subayyal.instantplaylist.MainActivity">
+
+    <FrameLayout
+        android:id="@+id/progress_bar_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_filters_layout">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_filters_layout" />
+    </FrameLayout>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/search_filters_layout"
@@ -14,6 +45,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorWhite"
+        android:elevation="4dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -86,7 +119,7 @@
         app:layout_constraintTop_toBottomOf="@+id/search_filters_layout" />
 
 
-    <com.github.pedrovgs.DraggablePanel
+    <com.github.pedrovgs.DraggablePanel xmlns:draggable_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/draggable_panel_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -94,7 +127,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        draggable_view:bottom_view_id="@+id/playlist_fragment_"
+        draggable_view:enable_click_to_maximize_view="true"
+        draggable_view:enable_click_to_minimize_view="false"
+        draggable_view:top_view_id="@+id/youtube_fragment">
 
     </com.github.pedrovgs.DraggablePanel>
 
